<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2020 Mica Technologies
  ~
  ~ This program is free software: you can redistribute it and/or modify it
  ~ under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty
  ~ of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- APPLICATION/ARTIFACT INFORMATION -->
    <groupId>com.micatechnologies.minecraft</groupId>
    <artifactId>launcher</artifactId>
    <version>2021.1</version>
    <name>Mica Minecraft Launcher</name>
    <packaging>jar</packaging>

    <!-- PROJECT AND CUSTOM PROPERTIES -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <main.class>com.micatechnologies.minecraft.launcher.LauncherCore</main.class>
        <app.name>Mica Minecraft Launcher</app.name>
        <info.vmargs>-Djava.net.preferIPv4Stack=true</info.vmargs>
        <izpack.staging>${project.build.directory}${file.separator}windows-installer</izpack.staging>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>dd-MM-yyyy HH:mm</maven.build.timestamp.format>
    </properties>

    <!-- SPECIFIED REPOSITORIES FOR DEPENDENCIES -->
    <repositories>
        <!-- CyberDuck MAVEN REPOSITORY -->
        <repository>
            <id>maven.cyberduck.io-release</id>
            <url>http://repo.maven.cyberduck.io.s3.amazonaws.com/releases/</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <!-- GitHub BASED MAVEN REPOS -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <!-- CLEANUP UNWANTED FILES AND BINARIES -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>target</directory>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- SET APP VERSION AND NAME CONSTANTS -->
            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>replacer</artifactId>
                <version>1.5.3</version>
                <executions>
                    <execution>
                        <id>replace-version-number</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <include>
                            ${project.basedir}${file.separator}src${file.separator}main${file.separator}java${file.separator}com${file.separator}micatechnologies${file.separator}minecraft${file.separator}launcher${file.separator}consts${file.separator}LauncherConstants.java
                        </include>
                    </includes>
                    <replacements>
                        <replacement>
                            <token>LAUNCHER_APPLICATION_NAME = ".*"</token>
                            <value>LAUNCHER_APPLICATION_NAME = "${app.name}"</value>
                        </replacement>
                        <replacement>
                            <token>LAUNCHER_APPLICATION_VERSION = ".*"</token>
                            <value>LAUNCHER_APPLICATION_VERSION = "${project.version}"</value>
                        </replacement>
                    </replacements>
                </configuration>
            </plugin>

            <!-- COMPILE CODE -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <parameters>true</parameters>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- ASSEMBLE JAR WITH DEPENDENCIES -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>${main.class}</mainClass>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- DOWNLOAD JAVA RUNTIMES -->
            <plugin>
                <groupId>com.igormaznitsa</groupId>
                <artifactId>mvn-jlink-wrapper</artifactId>
                <version>1.0.5</version>
                <executions>
                    <!-- CACHE MAC JDK 11 -->
                    <execution>
                        <id>cache-jdk-11-mac</id>
                        <goals>
                            <goal>cache-jdk</goal>
                        </goals>
                        <configuration>
                            <provider>BELLSOFT</provider>
                            <providerConfig>
                                <type>jre</type>
                                <version>11.0.11+9</version>
                                <arch>amd64-full</arch>
                                <os>macos</os>
                            </providerConfig>
                            <jdkCachePath>${project.basedir}${file.separator}jre${file.separator}mac</jdkCachePath>
                            <jdkPathProperty>jlink.mac.jdk.path</jdkPathProperty>
                        </configuration>
                    </execution>
                    <!-- CACHE WIN JDK 11 -->
                    <execution>
                        <id>cache-jdk-11-win</id>
                        <goals>
                            <goal>cache-jdk</goal>
                        </goals>
                        <configuration>
                            <provider>BELLSOFT</provider>
                            <providerConfig>
                                <type>jre</type>
                                <version>11.0.11+9</version>
                                <arch>amd64-full</arch>
                                <os>windows</os>
                            </providerConfig>
                            <jdkCachePath>${project.basedir}${file.separator}jre${file.separator}win</jdkCachePath>
                            <jdkPathProperty>jlink.win.jdk.path</jdkPathProperty>
                        </configuration>
                    </execution>
                    <!-- CACHE LINUX JDK 11 -->
                    <execution>
                        <id>cache-jdk-11-lin</id>
                        <goals>
                            <goal>cache-jdk</goal>
                        </goals>
                        <configuration>
                            <provider>BELLSOFT</provider>
                            <providerConfig>
                                <type>jre</type>
                                <version>11.0.11+9</version>
                                <arch>amd64-full</arch>
                                <os>linux</os>
                            </providerConfig>
                            <jdkCachePath>${project.basedir}${file.separator}jre${file.separator}lin</jdkCachePath>
                            <jdkPathProperty>jlink.lin.jdk.path</jdkPathProperty>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- VERIFY JDK DOWNLOADS -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M2</version>
                <executions>
                    <execution>
                        <id>check-folder-exist</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireFilesExist>
                                    <files>
                                        <file>${project.basedir}${file.separator}jdk${file.separator}mac</file>
                                        <file>${project.basedir}${file.separator}jdk${file.separator}win</file>
                                        <file>${project.basedir}${file.separator}jdk${file.separator}lin</file>
                                    </files>
                                </requireFilesExist>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.5.1</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                    <bundleJre>true</bundleJre>
                    <jreMinVersion>11</jreMinVersion>
                    <generateInstaller>true</generateInstaller>
                    <licenseFile>${project.basedir}${file.separator}LICENSE</licenseFile>
                    <runnableJar>${project.build.directory}${file.separator}${project.artifactId}-${project.version}-jar-with-dependencies.jar</runnableJar>
                    <copyDependencies>false</copyDependencies>
                    <additionalResources>
                        <additionalResource>${project.basedir}${file.separator}src${file.separator}main${file.separator}resources</additionalResource>
                    </additionalResources>
                </configuration>
                <executions>
                    <execution>
                        <id>bundling-for-windows</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <platform>windows</platform>
                            <createZipball>true</createZipball>
                            <jrePath>${jlink.win.jdk.path}</jrePath>
                        </configuration>
                    </execution>
                    <execution>
                        <id>bundling-for-linux</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <platform>linux</platform>
                            <createTarball>true</createTarball>
                            <jrePath>${jlink.lin.jdk.path}</jrePath>
                        </configuration>
                    </execution>
                    <execution>
                        <id>bundling-for-mac</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <platform>mac</platform>
                            <createTarball>true</createTarball>
                            <jrePath>${jlink.mac.jdk.path}</jrePath>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.5.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.rauschig</groupId>
            <artifactId>jarchivelib</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.9</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>28.1-jre</version>
        </dependency>
        <dependency>
            <groupId>commons-httpclient</groupId>
            <artifactId>commons-httpclient</artifactId>
            <version>3.1</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.5.0</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>5.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.rococoa</groupId>
            <artifactId>rococoa-cocoa</artifactId>
            <version>0.5</version>
        </dependency>
        <dependency>
            <groupId>org.rococoa</groupId>
            <artifactId>rococoa-core</artifactId>
            <version>0.5</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.swt</groupId>
            <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
            <version>4.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-model</artifactId>
            <version>3.6.2</version>
        </dependency>
    </dependencies>
</project>
